# symex-demo

./: Cargo.toml  asm  build.rs  log.rs  log.s  mem_link.x  memory.x  simple_rtic_debug  simple_rtic_release
.cargo/: config.toml
examples/: simple_rtic.rs
src/: main.rs
