[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
critical-section = {version = "1.2.0"}
defmt = "0.3"
defmt-rtt = "0.4.0"
dht-sensor = "0.2.1"
embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = {version = "0.2.0", features = ["defmt-03"]}
embedded-io = "0.6.1"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
fugit = "0.3.6"
futures = {version = "0.3.30", default-features = false, features = ["async-await"]}
hd44780-driver = "0.4.0"
nb = "1.0"
panic-halt = "0.2.0"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}
pio = "0.2.0"
pio-proc = "0.2.0"
# We aren't using this, but embedded-hal-bus 0.2 unconditionally requires atomics.
# Should be fixed in e-h-b 0.3 via https://github.com/rust-embedded/embedded-hal/pull/607
portable-atomic = {version = "1.7.0", features = ["critical-section"]}
rp2040-boot2 = "0.3.0"
# rp2040-hal = {version = "0.11.0", features = ["binary-info",  "rt", "defmt", "disable-intrinsics"]}
static_cell = "2.1.0"

symex_lib = { git = "https://github.com/ivajon/symex", branch = "easy" }
# symex_lib = { path = "../symex/crates/symex_lib/" } 
valid_derive = { git = "https://github.com/ivajon/symex", branch = "easy" }

layout-trait = { git = "https://github.com/ivajon/layout-trait" }
rp2040-monotonic = { path = "../rp2040-monotonic/"}#git = "https://github.com/ivajon/rp2040-monotonic" }
rp-pico = {version =  "0.9.0", features = ["rt",  "disable-intrinsics"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
# lto = 'fat'
opt-level = 3
overflow-checks = true
