[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
embedded-hal = "1.0.0"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
fugit = "0.3.6"
panic-halt = "0.2.0"
panic-probe = {version = "0.3.1"}
# We aren't using this, but embedded-hal-bus 0.2 unconditionally requires atomics.
# Should be fixed in e-h-b 0.3 via https://github.com/rust-embedded/embedded-hal/pull/607
# portable-atomic = {version = "1.7.0", features = ["critical-section"]}
# static_cell = "2.1.0"

symex_lib = { git = "https://github.com/ivajon/symex", branch = "easy" }
# symex_lib = { path = "../symex/crates/symex_lib/" } 
valid_derive = { git = "https://github.com/ivajon/symex", branch = "easy" }

layout-trait = { git = "https://github.com/ivajon/layout-trait" }
nrf52840-hal = { git = "https://github.com/Ltu-Bike-trailer/nrf-hal.git", features = [
    "rt","rtic-monotonic",
], default-features = false }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
# lto = 'fat'
opt-level = 3
overflow-checks = true
